@@ -1,4 +1,0 @@
-* @TODAY_CHANGELOG@ @MAINTAINER@ - @PRJ_VER@
-@CHANGELOG_ITEMS@
-
-@CHANGELOG_PREV@
