@@ -1,2 +1,0 @@
-SOURCE_VERSION_CONTROL=<PRJ_SOURCE_VERSION_CONTROL>
-
