@@ -1,4 +1,0 @@
-* @TODAY_CHANGELOG@ @MAINTAINER@ - @PRJ_VER@-@PRJ_RELEASE_NO@
-@CHANGELOG_ITEMS@
-
-@RPM_CHANGELOG_PREV@
